List of user-visible changes of Public Domain Ratfor.

New in XXX
-----------
 
 * Tabs in input are always converted to single spaces in output, even in
   generated fortran comments.
 * If `make' is called on an unconfigured tree, and it is GNU make, it
   automatically run autoreconf and ./configure before trying to build
   the given targets.
 * Added the customary installation instruction (in file `INSTALL').

New in 1.0h
-----------

 * Extended make rules useful to maintainers, in particular with the
   addition of files `GNUmakefile' and `maint.mk'
 * Now the user can explicitly tell configure that he doesn't have (or
   doesn't want to use) a Fortran 77 compiler for the testsuite.
   This is done by setting the configure variable `RAT4_TESTSUITE_F77'
   to `NONE'.

New in 1.0g
-----------

 * The make target `clean' should now work correctly even an a already
   cleaned tree (previously it could fail if no temporary directory used
   by test scripts was present!)
 * Ratfor uses Git as its version control system.

New in 1.0f
-----------

 * The format of error messages has been improved -- now it follows the
   gcc-style `FILENAME:LINENO: ERRMSG'
 * Bugfix in option parsing: the option `-l' is now recognized again
 * The make targets `distcheck' and `clean' should now work.
 * The make target `check' now let the user override the variable
   `$(TESTS)' withour problems
 * The list of known bugs has been extended and improved.
 * The ratfor binary used by the testsuite is now correctly rebuild
   when needed, even from within the `tests' directory
 * The ratfor source code has been modularized and cleaned somewhat.

New in 1.0e
-----------

 * On non-fatal syntax errors in input, a proper error message is displayed
   on standard error, but input processing is not stopped (this was also
   the previous behaviour). However, if any syntax error occourred, ratfor
   is now guaranteed to eventually exit with  exit status `1' (previously